# tripswitch-py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: conftest.py  test_admin.py  test_admin_integration.py  test_client.py  test_execute.py  test_ingest.py  test_integration.py  test_sse.py
tripswitch/: __init__.py  _sse.py  client.py  errors.py  types.py
tripswitch/admin/: __init__.py  client.py  types.py
