[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tripswitch-py"
version = "0.2.0"
description = "Official Python SDK for the Tripswitch circuit breaker service"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Matthew Carlone", email = "matthewcarlone@hey.com" },
]
keywords = ["circuit-breaker", "resilience", "fault-tolerance", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
homepage = "https://tripswitch.dev"
repository = "https://github.com/tripswitch-dev/tripswitch-py"
dependencies = [
    "httpx>=0.24",
]

[project.urls]
"Bug Tracker" = "https://github.com/tripswitch-dev/tripswitch-py/issues"
"Changelog" = "https://github.com/tripswitch-dev/tripswitch-py/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["tripswitch"]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-httpserver>=1.0",
    "respx>=0.20",
]
